--- a/input.html
+++ b/input.html
@@ -272,7 +272,11 @@ function addColorsIfAmb(s) {
         if (s[i] == "_" || s[i] == "A" || s[i] == "C" || s[i] == "T" || s[i] == "G" || s[i] == "a" || s[i] == "c" || s[i] == "t" || s[i] == "g") {
             result.push(s[i]);
         } else {
-            result.push("<span class='bgred'>" + s[i] + "</span>");
+            if (s[i] == s[i].toUpperCase()) {
+                result.push("<span class='bgred'>" + s[i] + "</span>");
+            } else {
+                result.push("<span class='bgyellow'>" + s[i] + "</span>");
+            }
         }
     }
     return result.join("");
