Implement JFF text feedback

--- a/faq.html
+++ b/faq.html
@@ -160,7 +160,7 @@ Flot (2007) <strong>Champuru 1.0: a computer software for unraveling mixtures of
 <a href="http://dx.doi.org/10.1111/j.1471-8286.2007.01857.x">link</a> <br>
 <p> For instance: <q>Phase determination in length variant heterozygotes
  was performed by direct sequencing (Flot et al., 2006) with the help of
- Champuru v1.0 (Flot 2007, available online at <a href="https://eeg-ebe.github.io/Champuru/">https://eeg-ebe.github.io/Champuru/</a>)</q></div>
+ Champuru (Flot 2007) v1.5 (Sp&ouml;ri & Flot, in prep.; available online at <a href="https://eeg-ebe.github.io/ChampuruV1.5/">https://eeg-ebe.github.io/ChampuruV1.5/</a>)</q></div>
                 </div>
             </div>
             <div class="navigation">
