--- a/input.html
+++ b/input.html
@@ -66,8 +66,8 @@
                                 <td valign="top">Paper</td><td valign="top">The score correction method described in the Champuru 1.0 paper.</td>
                             </tr>
                             <tr class="odd">
-                                <td valign="top">Ambiguity correction</td><td valign="top">A modification of the score correction method described in the Champuru 1.0 paper.
-The score will get corrected for the fact that ambiguous characters (e.g. W) can match multiple other characters (e.g. A, T).
+                                <td valign="top">Ambiguity correction</td><td valign="top">A modification of the score calculation method described in the Champuru 1.0 paper.
+This modified score corrects for the fact that ambiguous characters (e.g. W) can match multiple other characters (e.g. A, T).
 Preliminary results suggests that this score calculation method works better when the reconstructed consensus sequences contain a lot of ambiguities.
 However this score correction method seems to work less good on short input sequences.
 </td>
