Change some text, reorder 'Check positions', do not reanalyse the same position if 'Analyze further offset pairs' is ticked

--- a/input.html
+++ b/input.html
@@ -79,13 +79,15 @@ However this score correction method seems to work less good on short input sequ
                     </td>
                 </tr>
                 <tr class="option">
-                    <td>Search for alternative solutions:</td>
+                    <td>Analyze further offset pairs:</td>
                     <td>&nbsp;&nbsp;&nbsp;</td>
                     <td><input type="checkbox" id="searchForAlternativeSolutions" autocomplete="off"></td>
                 </tr>
                 <tr class="description">
                     <td colspan="3">
-                        <p>When this checkbox is clicked, Champuru will search search for alternative solutions. Because this can take some time, this checkbox is not checked by default.</p>
+                        <p>When this checkbox is clicked Champuru will not only use the best offset pair for sequence reconstruction but it will also run the
+                        sequence reconstruction algorithm for further offset pairs.
+                        This can take some time which is why this checkbox is not checked by default.</p>
                     </td>
                 </tr>
             </table>
