Further text description

--- a/input.html
+++ b/input.html
@@ -86,7 +86,8 @@ However this score correction method seems to work less good on short input sequ
                 <tr class="description">
                     <td colspan="3">
                         <p>When this checkbox is clicked Champuru will not only use the best offset pair for sequence reconstruction but it will also run the
-                        sequence reconstruction algorithm for further offset pairs.
+                        sequence reconstruction algorithm for further offset pairs. Thus it's possible to see whether there is another offset pair that works
+                        better or if the corresponding sequence has multiple solutions.
                         This can take some time which is why this checkbox is not checked by default.</p>
                     </td>
                 </tr>
