--- a/input.html
+++ b/input.html
@@ -87,7 +87,7 @@ However this score correction method seems to work less good on short input sequ
                     <td colspan="3">
                         <p>When this checkbox is clicked Champuru will not only use the best offset pair for sequence reconstruction but it will also run the
                         sequence reconstruction algorithm for further offset pairs. Thus it's possible to see whether there is another offset pair that works
-                        better or if the corresponding sequence has multiple solutions.
+                        better or whether it is possible to find multiple solutions for the given input.
                         This can take some time which is why this checkbox is not checked by default.</p>
                     </td>
                 </tr>
