Do not set 'analyse further offset pairs to true for other then the multi solution example

--- a/input.html
+++ b/input.html
@@ -259,6 +259,8 @@ function load(i) {
     document.getElementById('reverse').value = document.getElementById('example' + i + 'reverse').innerText;
     if (i == 4) {
         document.getElementById('searchForAlternativeSolutions').checked = true;
+    } else {
+        document.getElementById('searchForAlternativeSolutions').checked = false;
     }
 }
 
