Update jflots mail address

--- a/faq.html
+++ b/faq.html
@@ -16,7 +16,7 @@
             <div class="navigation">
                 <a href="index.html">Back to startpage</a>
                 <a href="input.html">Run Champuru</a>
-                <a href="mailto: jflot@ulb.ac.be">E-Mail the author</a>
+                <a href="mailto: jflot@ulb.be">E-Mail the author</a>
             </div>
             <h2>Frequently Asked Questions</h2>
             <div class="faqs">
@@ -166,7 +166,7 @@ Flot (2007) <strong>Champuru 1.0: a computer software for unraveling mixtures of
             <div class="navigation">
                 <a href="index.html">Back to startpage</a>
                 <a href="input.html">Run Champuru</a>
-                <a href="mailto: jflot@ulb.ac.be">E-Mail the author</a>
+                <a href="mailto: jflot@ulb.be">E-Mail the author</a>
             </div>
         </div>
     </body>
