--- a/input.html
+++ b/input.html
@@ -17,7 +17,7 @@
                 <a href="index.html">Back to startpage</a>
                 <a href="faq.html">FAQ</a>
                 <a href="tutorial.html">Tutorial</a>
-                <a href="mailto: jflot@ulb.ac.be">E-Mail the author</a>
+                <a href="mailto: jflot@ulb.be">E-Mail the author</a>
             </div>
             <h2></h2>
             <div class="importanttips">
@@ -142,7 +142,7 @@ However this score correction method seems to work less good on short input sequ
                 <a href="index.html">Back to startpage</a>
                 <a href="faq.html">FAQ</a>
                 <a href="tutorial.html">Tutorial</a>
-                <a href="mailto: jflot@ulb.ac.be">E-Mail the author</a>
+                <a href="mailto: jflot@ulb.be">E-Mail the author</a>
             </div>
         </div>
         <script>
