--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <div class="description">Browse the frequently asked questions.</div>
                 </div>
             </a>
-            <a href="mailto: jflot@ulb.ac.be">
+            <a href="mailto: jflot@ulb.be">
                 <div id="contactbox" class="box">
                     <div class="logo">
                         <svg width="100" height="100">
