Add a download page

--- a/index.html
+++ b/index.html
@@ -55,8 +55,7 @@
                     <div class="description">E-mail the author.</div>
                 </div>
             </a>
-<!--
-            <a href="https://eeg-ebe.github.io/ChampuruV1.5/champuru.py">
+            <a href="download.html">
                 <div id="downloadBox" class="box">
                     <div class="logo">
                         <svg width="100" height="100">
@@ -67,10 +66,9 @@
                         </svg>
                     </div>
                     <div class="title">Download</div>
-                    <div class="description">Download the python version of the Champuru program.</div>
+                    <div class="description">Download the Champuru program.</div>
                 </div>
             </a>
--->
         </div>
     </body>
 </html>
