--- a/index.html
+++ b/index.html
@@ -55,6 +55,14 @@
                     <div class="description">E-mail the author.</div>
                 </div>
             </a>
+            <div id="hiddenBox" class="box" style="visibility: hidden">
+                <div class="logo">
+                    <svg width="100" height="100">
+                    </svg>
+                </div>
+                <div class="title"></div>
+                <div class="description"></div>
+            </div>
             <a href="download.html">
                 <div id="downloadBox" class="box">
                     <div class="logo">
