--- a/download.html
+++ b/download.html
@@ -23,8 +23,8 @@
                 You can download the following programs to run the Champuru program locally via commandline:
             </p>
             <ol>
-                <li><a href="https://github.com/eeg-ebe/champuru_linux">champuru</a> for Linux</li>
-                <li><a href="https://github.com/eeg-ebe/champuru_mac">champuru</a> for Mac</li>
+                <li><a href="https://github.com/eeg-ebe/ChampuruV1.5/champuru_linux">champuru</a> for Linux</li>
+<!--                <li><a href="https://github.com/eeg-ebe/champuru_mac">champuru</a> for Mac</li>-->
             </ol>
         </div>
     </body>
